Fixed SuggestionGallery overflow issue

--- a/client/src/components/css/SuggestionGallery.css
+++ b/client/src/components/css/SuggestionGallery.css
@@ -21,4 +21,5 @@
     justify-content: flex-start;
     align-content: center;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
